feat(address): added functionality for house and street lookup [NOTICKET]
